<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/level_1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_1"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />

            <Button
                android:id="@+id/level_2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_2"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/level_3"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_3"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />

            <Button
                android:id="@+id/level_4"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_4"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/level_5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_5"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />

            <Button
                android:id="@+id/level_6"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_6"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/level_7"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_7"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />

            <Button
                android:id="@+id/level_8"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_8"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/level_9"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_9"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />

            <Button
                android:id="@+id/level_10"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/level_10"
                android:textColor="#DFDFDF"
                android:textStyle="bold"
                android:layout_weight="1"
                android:drawablePadding="-30dip"
                android:layout_margin="20dip" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>